Fix Api error display

--- a/service/statics.html
+++ b/service/statics.html
@@ -84,7 +84,11 @@
                             </div>
                             <div class="stat-title">Cpu Usage</div>
                             <div id="DataCpu" class="stat-value"><span id="Loader1"
-                                    class="loading loading-spinner loading-md"></span></div>
+                                    class="loading loading-spinner loading-md"></span><span id="LoaderError1"
+                                    style="font-size: 2rem !important;display: none;"
+                                    class="material-symbols-outlined tilt-in-bottom-1">
+                                    sync_problem
+                                </span></div>
                         </div>
 
                         <div class="stat">
@@ -95,7 +99,11 @@
                             </div>
                             <div class="stat-title">Ram Usage</div>
                             <div id="DataRam" class="stat-value"><span id="Loader2"
-                                    class="loading loading-spinner loading-md"></span></div>
+                                    class="loading loading-spinner loading-md"></span><span id="LoaderError2"
+                                    style="font-size: 2rem !important;display: none;"
+                                    class="material-symbols-outlined tilt-in-bottom-1">
+                                    sync_problem
+                                </span></div>
                         </div>
 
                         <div class="stat">
@@ -106,7 +114,11 @@
                             </div>
                             <div class="stat-title">Ping</div>
                             <div id="DataPing" class="stat-value"><span id="Loader3"
-                                    class="loading loading-spinner loading-md"></span></div>
+                                    class="loading loading-spinner loading-md"></span><span id="LoaderError3"
+                                    style="font-size: 2rem !important;display: none;"
+                                    class="material-symbols-outlined tilt-in-bottom-1">
+                                    sync_problem
+                                </span></div>
                         </div>
 
                     </div>
