Add Futami status announcement

--- a/service/document.html
+++ b/service/document.html
@@ -29,6 +29,8 @@
     <script src="/script/darkmode.js"></script>
     <script defer src="/index.js"></script>
     <script src="/module/aos.js"></script>
+    <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="165796" async="async"
+        type="text/javascript"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
