--- a/service/index.html
+++ b/service/index.html
@@ -32,6 +32,8 @@
     <script src="/module/axios.js"></script>
     <script src="/module/typed.js"></script>
     <script src="/module/aos.js"></script>
+    <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="165796" async="async"
+        type="text/javascript"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
