--- a/service/statics.html
+++ b/service/statics.html
@@ -29,6 +29,8 @@
     <script defer src="/index.js"></script>
     <script defer src="/script/request.js"></script>
     <script src="/module/axios.js"></script>
+    <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="165796" async="async"
+        type="text/javascript"></script>
 </head>
 
 <body onmousemove="GetCursor(event)">
