Update Futami SEO

--- a/service/404.html
+++ b/service/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | 404</title>
     <meta name="theme-color" content="#345ca8" />
