--- a/service/index.html
+++ b/service/index.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | หน้าหลักฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Imagine music bot">
+    <meta name="keywords" content="Futami, FUTAMI, ฟูตามิ, Discord bot, บอทเพลง, บอทดิสคอร์ด">
     <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Futami">
-    <meta name="twitter:description" content="Futami - Imagine music bot">
+    <meta name="twitter:title" content="Futami - Imagine music bot">
+    <meta name="twitter:description"
+        content="Futami a bot created by FujaTyping at the request of his friend ph007phop, offers music, moderation, fun, and API commands, quickly becoming popular among Discord users">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
     <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
