--- a/service/document.html
+++ b/service/document.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/fav.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/fav.ico" type="image/x-icon">
     <meta property="og:type" content="website" />
     <title>Futami | เอกสารที่เกี่ยวข้องกับฟูตามิ</title>
     <meta name="theme-color" content="#345ca8" />
     <meta name="description" content="Futami - Privacy & Terms">
-    <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
+    <meta property="og:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Futami">
-    <meta name="twitter:description" content="Futami - Privacy & Terms">
+    <meta name="twitter:title" content="Futami - Privacy & Terms">
+    <meta name="twitter:description"
+        content="Futami a bot created by FujaTyping at the request of his friend ph007phop, offers music, moderation, fun, and API commands, quickly becoming popular among Discord users">
     <meta name="twitter:site" content="@fujatyping" />
     <meta name="twitter:creator" content="@fujatyping" />
-    <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-pat.png" />
+    <meta property="twitter:image" content="https://futami.siraphop.me/assets/banner/content-index.png" />
     <link href="/module/daisyui.css" rel="stylesheet" type="text/css" />
     <script src="/module/tailwind.js"></script>
     <link rel="stylesheet" href="/index.css">
