Add character search command

--- a/service/index.html
+++ b/service/index.html
@@ -270,6 +270,8 @@
                                 <p>
                                     <b><kbd class="kbd kbd-sm">/</kbd> anime random</b> : Random anime info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> anime search</b> : Search anime info<br>
+                                    <b><kbd class="kbd kbd-sm">/</kbd> anime character</b> : Search anime character
+                                    info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> air</b> : Check PM 2.5 Status<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
                                     <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
