Add instruction page to live

--- a/service/main/index.html
+++ b/service/main/index.html
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="bg-base-200">
-            <p id="MoreText" onclick="ShowMoreFeature()"
+            <p class="point" id="MoreText" onclick="ShowMoreFeature()"
                 style="text-align: center;color: gray;text-decoration: underline;margin-top: 0;padding: 10px;">Show more
                 feature</p>
             <div class="tilt-in-bottom-1" style="display: none;" id="OtherFeature">
@@ -201,87 +201,14 @@
                 </div>
             </div>
         </div>
-        <div class="hero bg-base-200 hero-normal hero-command">
+        <div style="padding-top: 55px;" class="hero bg-base-200 hero-normal arrow-docs">
             <div class="hero-content text-center">
                 <div class="max-w-md">
-                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Command</h1>
-                    <p class="py-6">My prefix is <kbd class="kbd kbd-sm">f.</kbd> , You cannot use @MENTION<br>Some
-                        command also use <kbd class="kbd kbd-sm">/</kbd> slash command</p>
-                    <div>
-                        <div class="collapse collapse-plus bg-base-100">
-                            <input type="radio" name="my-accordion-3" checked="checked" />
-                            <div class="collapse-title text-xl font-medium">
-                                Music command
-                            </div>
-                            <div class="collapse-content lefted">
-                                <p><b style="display: inline;">filter</b> : Make your song more funny &nbsp;<span
-                                        style="display: inline;" onclick="filter_modal.showModal()"
-                                        class="point">⇥</span><br>
-                                    <b>loop</b> : Loop song<br>
-                                    <a class="usage">↳ usage : enter off , song or queue</a><br>
-                                    <b>play</b> : Play song and join<br>
-                                    <a class="usage">↳ usage : enter song name or url</a><br>
-                                    <b>pause</b> : pause a song<br>
-                                    <b>queue</b> : See song queue<br>
-                                    <b>shuffle</b> : Shuffle song queue<br>
-                                    <b>skip</b> : Skip current song<br>
-                                    <b>stop</b> : Stop current song and leave<br>
-                                    <b>volume</b> : Change volume<br>
-                                    <a class="usage">↳ usage : enter value of volume</a><br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> lyrics</b> : Show lyrics of the song
-                                </p>
-                            </div>
-                        </div> <br>
-                        <div class="collapse collapse-plus bg-base-100">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title text-xl font-medium">
-                                Moderation command
-                            </div>
-                            <div class="collapse-content lefted">
-                                <p>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> timeout</b> : timeout member in guild<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> kick</b> : kick member
-                                </p>
-                            </div>
-                        </div> <br>
-                        <div class="collapse collapse-plus bg-base-100">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title text-xl font-medium">
-                                Fun command
-                            </div>
-                            <div class="collapse-content lefted">
-                                <p>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> emote</b> : Show your emote<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> meme</b> : Random meme generator<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> tictactoe</b> : Play tic tac toe game<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> fasttype</b> : Test your type speed<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> matchpairs</b> : Play match pairs emoji game<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> canvas</b> : Create you own meme<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> waifu</b> : Random waifu image
-                                </p>
-                            </div>
-                        </div> <br>
-                        <div class="collapse collapse-plus bg-base-100">
-                            <input type="radio" name="my-accordion-3" />
-                            <div class="collapse-title text-xl font-medium">
-                                Etc.
-                            </div>
-                            <div class="collapse-content lefted">
-                                <p>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> anime random</b> : Random anime info<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> anime search</b> : Search anime info<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> anime character</b> : Search anime character
-                                    info<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> air</b> : Check PM 2.5 Status<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> info</b> : Show server info<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> about</b> : See about me<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> url</b> : A Url tools<br>
-                                    <b><kbd class="kbd kbd-sm">/</kbd> request</b> : Give Futami a feedback<br>
-                                    <b>ping</b> : See my response time<br>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Explore more</h1>
+                    <p class="py-6">If you need help or don't know the commands, you can visit the instruction page for
+                        more information.</p>
+                    <a href="/instruction.html" class="btn bg-base-300">Instruction
+                        <span class="material-symbols-outlined">menu_book</span></a>
                 </div>
             </div>
         </div>
