Add calculator command & Use choices object (JSON)

--- a/service/main/instruction.html
+++ b/service/main/instruction.html
@@ -246,6 +246,11 @@
                                     </tr>
                                     <tr>
                                         <td><kbd class="kbd kbd-sm">/</kbd></td>
+                                        <td>calculator</td>
+                                        <td>Calculate math</td>
+                                    </tr>
+                                    <tr>
+                                        <td><kbd class="kbd kbd-sm">/</kbd></td>
                                         <td>anime random</td>
                                         <td>Random anime info</td>
                                     </tr>
