Add name command

--- a/service/main/instruction.html
+++ b/service/main/instruction.html
@@ -245,6 +245,11 @@
                                         <td>See my response time</td>
                                     </tr>
                                     <tr>
+                                        <td><kbd class="kbd kbd-sm">f.</kbd></td>
+                                        <td>name</td>
+                                        <td>Name country analyzer</td>
+                                    </tr>
+                                    <tr>
                                         <td><kbd class="kbd kbd-sm">/</kbd></td>
                                         <td>calculator</td>
                                         <td>Calculate math</td>
