Add live-server & Custom status label

--- a/service/main/index.html
+++ b/service/main/index.html
@@ -125,10 +125,7 @@
             </div>
         </div>
         <div style="padding-bottom: 20px;" class="hero bg-base-100">
-            <span style="display: inline-block;"><a href="https://uptime.betterstack.com/?utm_source=status_badge"><img
-                        class="vibrate-1" src="https://uptime.betterstack.com/status-badges/v3/monitor/uu30.svg"
-                        alt="Better Stack Badge"></a>
-            </span>
+                <div id="badgeStatus" class="badge badge-error">API & Bot service : Service Disruption</div>
         </div>
         <img width="100%" src="/assets/divider.png">
         <div style="padding-top: 40px;" class="hero bg-base-200">
