Update status section

--- a/service/main/index.html
+++ b/service/main/index.html
@@ -124,7 +124,7 @@
                     Futami Statics</a>
             </div>
         </div>
-        <div style="padding-bottom: 20px;" class="hero bg-base-100">
+        <div id="StatusFrame" style="padding-bottom: 20px;display: none;" class="hero bg-base-100 text-focus-in">
                 <div id="badgeStatus" class="badge badge-error">API & Bot service : Service Disruption</div>
         </div>
         <img width="100%" src="/assets/divider.png">
