--- a/service/main/index.html
+++ b/service/main/index.html
@@ -255,8 +255,7 @@
             <h3 class="font-bold text-lg">Thank you !</h3>
             <img style="max-width: 18rem;margin: auto;" src="/assets/maskcot/Futami-thankyou.png"
                 class="max-w-sm rounded-lg" />
-            <p class="py-4">🎉 Thank you for inviting Futami to the server!<br>Explore Futami's commands on this
-                page<br><br>If you enjoy this project, consider supporting Futami : <a
+            <p class="py-4">🎉 Thank you for inviting Futami to the server!<br>Explore Futami's commands on <a style="text-decoration: underline;" href="https://futami.siraphop.me/instruction">Instruction page</a><br><br>If you enjoy this project, consider supporting Futami : <a
                     style="text-decoration: underline;" href="https://buymeacoffee.com/fujatyping">By me a
                     coffee</a><br>Encountering issues? Join our support server and fill out the : <a
                     href="https://discord.gg/D5nVCNskqN" style="text-decoration: underline;">Support
