--- a/service/main/index.html
+++ b/service/main/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div id="StatusFrame" style="padding-bottom: 20px;display: none;" class="hero bg-base-100 text-focus-in">
-                <div id="badgeStatus" class="badge badge-error">API & Bot service : Service Disruption</div>
+                <div id="badgeStatus" class="badge badge-error">API : Service Disruption</div>
         </div>
         <img width="100%" src="/assets/divider.png">
         <div style="padding-top: 40px;" class="hero bg-base-200">
