Compact config var & add https port on server

--- a/service/main/instruction.html
+++ b/service/main/instruction.html
@@ -132,7 +132,7 @@
                                     </tr>
                                     <tr>
                                         <td><kbd class="kbd kbd-sm">f.</kbd></td>
-                                        <td>skip/td>
+                                        <td>skip</td>
                                         <td>Skip current song</td>
                                     </tr>
                                     <tr>
