--- a/service/main/index.html
+++ b/service/main/index.html
@@ -63,7 +63,7 @@
                 <div style="margin-right: 15px;">
                     <div onclick="FutamiSay('Hello')" class="avatar">
                         <div class="rounded-full ring ring-secondary ring-offset-base-100 ring-offset-2">
-                            <img class="profile" src="/assets/fav.ico" />
+                            <img class="profile" src="/assets/fav.ico" alt="Futami-profile" />
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
         </div>
         <div style="padding-top: 5px;" class="hero bg-base-200 hero-normal hero-music">
             <div data-aos="fade-right" style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
-                <img style="max-width: 18rem;" src="/assets/feature-music.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="/assets/feature-music.png" alt="Futami-feature-music" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Support many music platform</h1>
                     <p class="py-6">Future will support more platform :D</p>
@@ -155,7 +155,7 @@
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-game">
             <div data-aos="fade-left" style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
                 <img style="max-width: 18rem;" src="/assets/feature-game.png"
-                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                    class="max-w-sm rounded-lg shadow-2xl image-feature" alt="Futami-feature-game" />
                 <div>
                     <h1 class="text-5xl font-bold">Play game anywhere</h1>
                     <p class="py-6">With gamecommand (Gamecord)</p>
@@ -165,7 +165,7 @@
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal">
             <div data-aos="fade-right" style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
                 <img style="max-width: 18rem;" src="/assets/feature-fun.png"
-                    class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                    class="max-w-sm rounded-lg shadow-2xl image-feature" alt="Futami-feature-fun" />
                 <div>
                     <h1 class="text-5xl font-bold">Make discord more funny</h1>
                     <p class="py-6">With fun command</p>
@@ -174,7 +174,7 @@
         </div>
         <div style="padding-top: 0;" class="hero bg-base-200 hero-normal hero-mod">
             <div data-aos="fade-left" style="gap: 3rem;" class="hero-content flex-col lg:flex-row">
-                <img style="max-width: 18rem;" src="/assets/feature-mod.png" class="max-w-sm rounded-lg shadow-2xl" />
+                <img style="max-width: 18rem;" src="/assets/feature-mod.png" alt="Futami-feature-mod" class="max-w-sm rounded-lg shadow-2xl" />
                 <div>
                     <h1 class="text-5xl font-bold">Make moderation easier</h1>
                     <p class="py-6">Now to can use command to moderation your server</p>
@@ -189,7 +189,7 @@
                 <div style="padding-top: 0;" class="hero hero-normal">
                     <div style="gap: 3rem;" class="hero-content flex-col lg:flex-row-reverse">
                         <img style="max-width: 20rem;" src="/assets/feature-chat.png"
-                            class="max-w-sm rounded-lg shadow-2xl image-feature" />
+                            class="max-w-sm rounded-lg shadow-2xl image-feature" alt="Futami-feature-chat" />
                         <div>
                             <h1 class="text-5xl font-bold">Interact with you</h1>
                             <p class="py-6">Chat with Futami</p>
@@ -204,7 +204,7 @@
                     <h1 style="font-family: Young Serif;" class="text-5xl font-bold">Story</h1>
                     <div data-aos="fade-up">
                         <img style="max-width: 18rem;margin: auto;margin-top: 22.5px;"
-                            src="/assets/banner/Card-Futami.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            src="/assets/banner/Card-Futami.png" class="max-w-sm rounded-lg shadow-2xl" alt="Futami-banner" />
                         <p class="py-6">Futami is a music bot created by FujaTyping in response to a request from his
                             close
                             friend, ph007phop. Futami can play music from a variety of sources and quickly gained
@@ -237,19 +237,6 @@
     <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="fujatyping" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
         data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
-    <dialog id="filter_modal" class="modal">
-        <div class="modal-box">
-            <h3 class="font-bold text-lg">Filter list <a href="https://ffmpeg.org/ffmpeg-filters.html">(FFmpeg audio
-                    filter)</a></h3>
-            <p class="py-4">3d , bassboost , echo , karaoke , nightcore , vaporwave , flanger , gate , haas , reverse ,
-                surround , mcompand , phaser , tremolo , earwax<br>
-                <a class="usage">↳ usage : enter filter</a>
-            </p>
-        </div>
-        <form method="dialog" class="modal-backdrop">
-            <button>close</button>
-        </form>
-    </dialog>
     <dialog id="thankyou" class="modal">
         <div class="modal-box">
             <h3 class="font-bold text-lg">Thank you !</h3>
