--- a/service/main/instruction.html
+++ b/service/main/instruction.html
@@ -107,12 +107,12 @@
                                     <tr>
                                         <td><kbd class="kbd kbd-sm">f.</kbd></td>
                                         <td>loop</td>
-                                        <td>Loop song <a class="usage">(usage : enter off , song or queue)</a></td>
+                                        <td>Loop song <e class="usage">(usage : enter off , song or queue)</e></td>
                                     </tr>
                                     <tr>
                                         <td><kbd class="kbd kbd-sm">f.</kbd></td>
                                         <td>play</td>
-                                        <td>Play song and join <a class="usage">(usage : enter song name or url)</a>
+                                        <td>Play song and join <e class="usage">(usage : enter song name or url)</e>
                                         </td>
                                     </tr>
                                     <tr>
@@ -143,7 +143,7 @@
                                     <tr>
                                         <td><kbd class="kbd kbd-sm">f.</kbd></td>
                                         <td>volume</td>
-                                        <td>Change volume <a class="usage">(usage : usage : enter value of volume)</a>
+                                        <td>Change volume <e class="usage">(usage : usage : enter value of volume)</e>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -321,7 +321,7 @@
                     filter)</a></h3>
             <p class="py-4">3d , bassboost , echo , karaoke , nightcore , vaporwave , flanger , gate , haas , reverse ,
                 surround , mcompand , phaser , tremolo , earwax<br>
-                <a class="usage">(usage : enter filter)</a>
+                <e class="usage">(usage : enter filter)</e>
             </p>
         </div>
         <form method="dialog" class="modal-backdrop">
